[package]
name = "ratatecs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_app = { version = "0.15.0", default-features = false }
bevy_ecs = { version = "0.15.0", default-features = false }
bevy_state = { version = "0.15.0", default-features = false, features = [ "bevy_app" ] }
crossterm = { version = "0.28.1", default-features = false }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm", "unstable-widget-ref"] }
